# live-pose-ros

./: CMakeLists.txt  README.md  package.xml
scripts/: node.py
src/: Utils.py  datareader.py  estimater.py  mask.py
src/docker/: dockerfile  run_container.sh
src/learning/datasets/: h5_dataset.py  pose_dataset.py
src/learning/models/: network_modules.py  refine_network.py  score_network.py
src/learning/training/: predict_pose_refine.py  predict_score.py  training_config.py
src/mycpp/: CMakeLists.txt
src/mycpp/include/: Utils.h
src/mycpp/src/: Utils.cpp
src/mycpp/src/app/: pybind_api.cpp
